@@ -2623,7 +2623,7 @@ License (GPL).</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Version 0.10.0<br />
+Version 0.10.1-dev<br />
 Last updated 2010-03-28 11:48:11 CEST
 </div>
 </div>
